Do not filter out grouped images in the filter model of the lighttable thumbbar

BUG: 308948